src/main/java/com/example/citronix/web/errors/InsufficientHarvestQuantityException.java
package com.example.citronix.web.errors;

public class InsufficientHarvestQuantityException extends RuntimeException {
    public InsufficientHarvestQuantityException() {
        super("Not enough quantity in the harvest for this sale.");
    }
}
